AppInmobiliaria/force-app/main/default/objects/Property_Match__c/Property_Match__c.object-meta.xml
<CustomObject>
    <label>Property Match</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>Match Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>