AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Client_Budget__c.field-meta.xml
<CustomField>
    <fullName>Client_Budget__c</fullName>
    <formula>Property_Request__r.Max_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>