AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Client_Desired_Province__c.field-meta.xml
<CustomField>
    <fullName>Client_Desired_Province__c</fullName>
    <formula>TEXT(Property_Request__r.Desired_State_Province__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Desired Province</label>
    <type>Text</type>
</CustomField>