AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Client_Min_Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Client_Min_Bathrooms__c</fullName>
    <formula>Property_Request__r.Min_Bathrooms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Min Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>