AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Client_Min_Square_Meters__c.field-meta.xml
<CustomField>
    <fullName>Client_Min_Square_Meters__c</fullName>
    <formula>Property_Request__r.Min_Square_Meters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Min Sq Meters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>