AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <formula>Property_Request__r.Client_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>