AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Client_Needs_Elevator__c.field-meta.xml
<CustomField>
    <fullName>Client_Needs_Elevator__c</fullName>
    <formula>Property_Request__r.Elevator_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Needs Elevator</label>
    <type>Checkbox</type>
</CustomField>