AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Match_Comments__c.field-meta.xml
<CustomField>
    <fullName>Match_Comments__c</fullName>
    <label>Match Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>