AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Status__c</fullName>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva Sugerencia</fullName>
                <default>true</default>
                <label>Nueva Sugerencia</label>
            </value>
            <value>
                <fullName>Enviada al Cliente</fullName>
            </value>
            <value>
                <fullName>Visita Programada</fullName>
            </value>
            <value>
                <fullName>Oferta Realizada</fullName>
            </value>
            <value>
                <fullName>Descartada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>