AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity / Listing</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Property Matches</relationshipLabel>
    <relationshipName>Cruces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>