AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>