AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Property_Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Property_Bathrooms__c</fullName>
    <formula>Opportunity__r.Property_Unit__r.Bathrooms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>