AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Property_Has_Elevator__c.field-meta.xml
<CustomField>
    <fullName>Property_Has_Elevator__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Has Elevator</label>
    <type>Checkbox</type>
</CustomField>