AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Property_Price__c.field-meta.xml
<CustomField>
    <fullName>Property_Price__c</fullName>
    <formula>Opportunity__r.Asking_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>