AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Property_Province__c.field-meta.xml
<CustomField>
    <fullName>Property_Province__c</fullName>
    <formula>&apos;a&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Province</label>
    <type>Text</type>
</CustomField>