AppInmobiliaria/force-app/main/default/objects/Property_Match__c/fields/Property_Request__c.field-meta.xml
<CustomField>
    <fullName>Property_Request__c</fullName>
    <label>Property Request</label>
    <referenceTo>Property_Request__c</referenceTo>
    <relationshipLabel>Property Matches</relationshipLabel>
    <relationshipName>Cruces</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>